--- a/RhinoMocksPlaything.Repositories/RhinoMocksPlaything.Repositories.csproj
+++ b/RhinoMocksPlaything.Repositories/RhinoMocksPlaything.Repositories.csproj
@@ -82,6 +82,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Context.cs" />
+    <Compile Include="IContext.cs" />
     <Compile Include="PersonRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
